--- a/src/pages/editprovinsi/editp.scss
+++ b/src/pages/editprovinsi/editp.scss
@@ -1,78 +1,76 @@
 .edit {
-    width: 100%;
-    display: flex;
-  
-    .editContainer {
-      flex: 6;
-  
-      .top,
-      .bottom {
-        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-        padding: 10px;
-        margin: 20px;
-        display: flex;
-  
-        h1 {
-          color: #363062bb;
-          font-size: 20px;
-        }
-  
-        .left {
-          flex: 1;
-          text-align: center;
-  
-          img {
-            width: 300px;
-            height: 200px;
-            border-radius: 5%;
-            object-fit: cover;
+  width: 100%;
+  display: flex;
+
+  .editContainer {
+
+      .top {
+          -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+          box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+          padding-left: 20px;
+          padding-right: 10px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          margin: 20px;
+          display: flex;
+
+          h1 {
+              color: #363062bb;
+              font-size: 20px;
           }
-        }
-  
-        .right {
-          flex: 2;
-  
-          form {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 30px;
-            justify-content: space-around;
-  
-            .formInput {
-              width: 100%;
-  
-              label {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-  
-                .icon {
-                  cursor: pointer;
-                }
-              }
-  
-              input {
-                width: 90%;
-                padding: 5px;
-                border: none;
-                border-bottom: 1px solid gray;
-              }
-            }
-  
-            button {
-              width: 120px;
-              padding: 10px;
-              border: none;
-              background-color: #7D1E6A;
-              color: white;
-              font-weight: bold;
-              cursor: pointer;
-              margin-top: 10px;
-              border-radius: 20px;
-            }
-          }
-        }
       }
-    }
+
+      .bottom {
+          -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+          box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+          padding: 20px;
+          margin: 20px;
+          display: flex;
+
+          h1 {
+              color: #363062bb;
+              font-size: 20px;
+          }
+
+          form {
+              display: flex;
+              flex-wrap: wrap;
+              gap: 30px;
+              justify-content: space-around;
+
+              .formInput {
+                  width: 970px;
+
+                  label {
+                      display: flex;
+                      align-items: center;
+                      gap: 10px;
+
+                      .icon {
+                          cursor: pointer;
+                      }
+                  }
+
+                  input {
+                      width: 100%;
+                      padding: 5px;
+                      border: none;
+                      border-bottom: 1px solid gray;
+                  }
+              }
+
+              button {
+                  width: 120px;
+                  padding: 10px;
+                  border: none;
+                  background-color: #7D1E6A;
+                  color: white;
+                  font-weight: bold;
+                  cursor: pointer;
+                  margin-top: 10px;
+                  border-radius: 20px;
+              }
+          }
+      }
   }
+}
