--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,78 +1,223 @@
-.datatable {
-    height: 600px;
-    padding: 20px;
+// .datatable {
+//     height: 600px;
+//     padding: 20px;
     
-    .datatableTitle{
-      width: 100%;
-      font-size: 24px;
-      color: gray;
-      margin-bottom: 10px;
+//     .datatableTitle{
+//       width: 100%;
+//       font-size: 24px;
+//       color: gray;
+//       margin-bottom: 10px;
+//       display: flex;
+//       align-items: center;
+//       justify-content: space-between;
+  
+//       .link{
+//         text-decoration: none;
+//         color: green;
+//         font-size: 16px;
+//         font-weight: 400;
+//         border: 1px solid green;
+//         padding: 5px;
+//         border-radius: 5px;
+//         cursor: pointer;
+//       }
+//     }
+  
+//     .cellWithImg {
+//       display: flex;
+//       align-items: center;
+  
+//       .cellImg {
+//         width: 32px;
+//         height: 32px;
+//         border-radius: 50%;
+//         object-fit: cover;
+//         margin-right: 20px;
+//       }
+//     }
+  
+//     .cellWithStatus {
+//       padding: 5px;
+//       border-radius: 5px;
+  
+//       &.active {
+//         background-color: rgba(0, 128, 0, 0.05);
+//         color: green;
+//       }
+//       &.pending {
+//         background-color: rgba(255, 217, 0, 0.05);
+//         color: goldenrod;
+//       }
+//       &.passive {
+//         background-color: rgba(255, 0, 0, 0.05);
+//         color: crimson;
+//       }
+//     }
+  
+//     .cellAction {
+//       display: flex;
+//       align-items: center;
+//       // gap: 15px;
+  
+//       .viewButton {
+//         padding: 2px 20px;
+//         border-radius: 5px;
+//         color: darkblue;
+//         border: 1px dotted rgba(0, 0, 139, 0.596);
+//         cursor: pointer;
+//       }
+      
+//       // .deleteButton {
+//       //   padding: 2px 5px;
+//       //   border-radius: 5px;
+//       //   color: crimson;
+//       //   border: 1px dotted rgba(220, 20, 60, 0.6);
+//       //   cursor: pointer;
+//       // }
+//     }
+//   }
+
+.datatable {
+  height: 600px;
+  width: 100%;
+
+  .top {
+      margin-bottom: 5px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-  
-      .link{
-        text-decoration: none;
-        color: green;
-        font-size: 16px;
-        font-weight: 400;
-        border: 1px solid green;
-        padding: 5px;
-        border-radius: 5px;
-        cursor: pointer;
+
+
+      .searchFilters {
+          display: flex;
+          align-items: flex-end;
+          flex-wrap: wrap;
+          gap: 10px;
+
+          .filter-container {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              font-size: 0.9rem;
+
+
+              .filter-title {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  gap: 2px;
+
+                  svg {
+                      font-size: 1.2rem;
+                  }
+              }
+
+              .reset {
+                  color: blue;
+                  cursor: pointer;
+
+                  &:hover {
+                      color: darkblue;
+                  }
+
+              }
+          }
+
+          .search {
+              width: 220px;
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              border: 0.5px solid lightgray;
+              padding: 5px;
+              border-radius: 4px;
+
+              input {
+                  border: none;
+                  outline: none;
+                  background-color: transparent;
+
+                  &::placeholder {}
+              }
+          }
       }
-    }
-  
-    .cellWithImg {
+
+      .addButton {
+          padding: 5px 10px;
+          font-size: 0.9rem;
+          color: white;
+          border-radius: 5px;
+          border-style: none;
+          background-color: #1bb193;
+          font-weight: 600;
+          margin: 5px 0;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          &:hover {
+              background-color: #1ba489;
+          }
+      }
+
+
+  }
+
+  .cellWithImg {
       display: flex;
       align-items: center;
-  
+
       .cellImg {
-        width: 32px;
-        height: 32px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin-right: 20px;
+          width: 32px;
+          height: 32px;
+          border-radius: 50%;
+          object-fit: cover;
+          margin-right: 20px;
       }
-    }
-  
-    .cellWithStatus {
+  }
+
+  .cellWithStatus {
       padding: 5px;
       border-radius: 5px;
-  
+
       &.active {
-        background-color: rgba(0, 128, 0, 0.05);
-        color: green;
+          background-color: rgba(0, 128, 0, 0.05);
+          color: green;
       }
+
       &.pending {
-        background-color: rgba(255, 217, 0, 0.05);
-        color: goldenrod;
+          background-color: rgba(255, 217, 0, 0.05);
+          color: goldenrod;
       }
+
       &.passive {
-        background-color: rgba(255, 0, 0, 0.05);
-        color: crimson;
+          background-color: rgba(255, 0, 0, 0.05);
+          color: crimson;
       }
-    }
-  
-    .cellAction {
+  }
+
+  .cellAction {
+      width: 100%;
       display: flex;
       align-items: center;
-      // gap: 15px;
-  
+      justify-content: center;
+      gap: 5px;
+
       .viewButton {
-        padding: 2px 20px;
-        border-radius: 5px;
-        color: darkblue;
-        border: 1px dotted rgba(0, 0, 139, 0.596);
-        cursor: pointer;
+          padding: 2px 5px;
+          border-radius: 5px;
+          color: darkblue;
+          border: 1px solid rgba(0, 0, 139, 0.396);
+          cursor: pointer;
       }
-      
-      // .deleteButton {
-      //   padding: 2px 5px;
-      //   border-radius: 5px;
-      //   color: crimson;
-      //   border: 1px dotted rgba(220, 20, 60, 0.6);
-      //   cursor: pointer;
-      // }
-    }
+
+      .deleteButton {
+          padding: 2px 5px;
+          border-radius: 5px;
+          color: crimson;
+          border: 1px solid rgba(220, 20, 60, 0.415);
+          cursor: pointer;
+      }
   }
+}
