--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -148,7 +148,7 @@
           color: white;
           border-radius: 5px;
           border-style: none;
-          background-color: #1bb193;
+          background-color: #4D4C7D;
           font-weight: 600;
           margin: 5px 0;
           cursor: pointer;
@@ -157,7 +157,7 @@
           justify-content: space-between;
 
           &:hover {
-              background-color: #1ba489;
+              background-color: #535278c9;
           }
       }
 
