--- a/src/components/datatablep/datatablep.scss
+++ b/src/components/datatablep/datatablep.scss
@@ -13,10 +13,10 @@
   
       .link{
         text-decoration: none;
-        color: green;
+        color: white;
         font-size: 16px;
         font-weight: 400;
-        border: 1px solid green;
+        border: 1px solid white;
         padding: 5px;
         border-radius: 5px;
         cursor: pointer;
