--- a/src/pages/editprovinsi/editp.scss
+++ b/src/pages/editprovinsi/editp.scss
@@ -25,7 +25,7 @@
                 align-items: center;
                 justify-content: center;
                 gap: 5px;
-                background-color: lightblue;
+                background-color: #a995d6dc;
                 padding: 8px;
                 cursor: pointer;
             }
@@ -80,7 +80,7 @@
         color: white;
         border-radius: 5px;
         border-style: none;
-        background-color: #6daffe;
+        background-color: #4D4C7D;
         font-weight: 600;
         margin: 5px 0;
         cursor: pointer;
@@ -90,7 +90,7 @@
 
         &:hover {
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
-            background-color: #4093f9;
+            background-color: #535278c9;
         }
 
         &:disabled {
