--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -15,6 +15,8 @@
         padding-bottom: 10px;
         margin: 20px;
         display: flex;
+        background-color: #E9D5CA;
+        border-radius: 10%;
   
         h1 {
           color: #363062bb;
